Minor fix to the footer. Now displays footer to the very bottom if the view port height is too large.

--- a/shared.css
+++ b/shared.css
@@ -252,6 +252,7 @@ header
 main
 {
     z-index: 0;
+    min-height: calc(100vh - 11rem - 4rem);
 }
 
 .title
